external-crates/move/crates/move-compiler/tests/move_check/typing/void_struct_field.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/void_struct_field.move:4:18
  │
4 │         let _b = Box { f: abort 0 };
  │                  ^^^^^^^^^^^^^^^^^^
  │                  │        │
  │                  │        Could not find a concrete type for this expression
  │                  Invalid type argument
